core_directory/tests/fixtures/invalid_no_sig/invalid_provider.core
CAPI=2:
name: vendor:library:core:1.0.0
description: "A valid with invalid provider."
provider:
  name: gitlab
  user: myuser
  repo: myrepo
  version: "0123456789abcdef0123456789abcdef01234567"
